--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
             <div class="container px-5">
                 <!-- <a class="navbar-brand" href="index.html">Laxmi Krupa Abrasivess Pvt. Ltd.</a> -->
                 <a class="navbar-brand align-middle" href="index.html" class="text-decoration-none">
-                    <img src="assets/logo/lkapl_logo.png" width="50" height="50" class="d-inline-block" alt="">
+                    <img src="assets/logo/lkapl_logo.png" height="50" class="d-inline-block" alt="">
                     &nbsp;Laxmi Krupa Abrasivess
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
